fixed styling for postCard and searchForm
fixed postCard being too small width-wise when post content is short. Fixed searchForm styling to display flex and column direction to avoid the search button positioning problems

--- a/public/styles/common/forms.css
+++ b/public/styles/common/forms.css
@@ -56,3 +56,12 @@
     border-radius: 4px;
     min-height: 20px;
 }
+
+/* Media query for search form to display flex and column direction */
+@media only screen and (max-width: 600px) {
+    .search-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
