--- a/public/styles/components/postCard.css
+++ b/public/styles/components/postCard.css
@@ -1,4 +1,5 @@
 .post {
+    min-width: 400px;
     width: 80%;
     display: flex;
     flex-direction: column;
